# GAMES101-Homework

./: CMakeLists.txt  README.md
Assignment0/: main.cpp
Assignment1/代码框架/: CMakeLists.txt  main.cpp
Assignment2/代码框架/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp
Assignment8/src/: rope.cpp
