cmake_minimum_required(VERSION 3.10)
project (Games101)

add_subdirectory(Assignment0)
add_subdirectory(Assignment1/代码框架)
add_subdirectory(Assignment2/代码框架)
add_subdirectory(Assignment3/Code)
add_subdirectory(Assignment4/code)
add_subdirectory(Assignment5/Code)
add_subdirectory(Assignment6/Assignment6)
add_subdirectory(Assignment7/Assignment7)
add_subdirectory(Assignment8)

